# fast-desmos2

./: Cargo.toml  README.md
src/: lexing.rs  main.rs  math.rs  parsing.rs  text.rs  utils.rs  windowing.rs
src/executor/: evaluator.rs
src/executor/evaluator/: error.rs  funcs.rs
src/file/: from_web.rs
src/lexing/: builtins.rs  error.rs  span.rs
src/lexing/builtins/: dyadic_pervasive.rs  monadic_non_pervasive.rs  monadic_pervasive.rs
src/parsing/: node.rs
src/text/: fonts.rs  glyph_data.rs  render.rs
src/utils/: iter.rs  vecs.rs
src/windowing/: render.rs
src/windowing/render/: text.rs  ui.rs
src/windowing/render/text/: dyn_buf.rs
